Removed oauth and simplified

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -1,1 +1,4 @@
-= link_to 'Connect with Github', 'authorize', {class: 'pure-button pure-button-primary'}
+- form_tag '/repos', :class => 'pure-form', :method => 'get' do
+  = flash_tag(:notice)
+  = text_field_tag :username, value: params[:userame], type: 'text', placeholder: 'Username'
+  = submit_tag "Go!", class: 'pure-button pure-button-primary'
