--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,7 +1,7 @@
 !!!Strict
 %html
   %head
-    %title= [@title, "Padrino Sample Blog"].compact.join(" | ")
+    %title= [@title, "Licensor"].compact.join(" | ")
     = stylesheet_link_tag 'http://yui.yahooapis.com/pure/0.2.1/pure-min.css', 'main', 'application'
     = yield_content :include
   %body{:style=>'text-align: center'}
@@ -9,5 +9,6 @@
       %h1 Licensor
     #container
       #main= yield
-    #footer
-      Copyright (c) 2013 Katherine Whitlock
+    .container
+      .site-footer
+        Copyright (c) 2013 Katherine Whitlock
