--- a/app/views/repos/index.haml
+++ b/app/views/repos/index.haml
@@ -1,4 +1,3 @@
-%h2 Your Repos
-%table{class: 'pure-table pure-table-horizontal' style: 'margin:10px auto; width:500px'}
+%table{class: 'pure-table pure-table-horizontal', style: 'margin:10px auto; width:500px'}
   %tbody
-    = partial 'repos/repo', collection: @client.repos.map{ |repo| repo['full_name'] }
+    = partial 'repos/repo', collection: Octokit.repos(params[:username]).map{ |repo| repo['full_name'] }
