--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -1,1 +1,30 @@
+.site-footer
+  position: relative
+  margin-top: 40px
+  padding-top: 40px
+  padding-bottom: 40px
+  font-size: 12px
+  line-height: 1.5
+  color: #777
+  border-top: 1px solid #eee
+  &:before
+    content: " "
+    display: table
+  &:after
+    content: " "
+    display: table
+    clear: both
 
+.site-footer-links
+  float: left
+  margin: 0
+  list-style: none
+  &.right
+    float: right
+  li
+    display: inline-block
+    line-height: 16px
+    + li
+      margin-left: 10px
+  img
+    display: block
