--- a/app/views/repos/_repo.haml
+++ b/app/views/repos/_repo.haml
@@ -1,6 +1,7 @@
 %tr
+  - licensed =  Octokit.contents(repo).any? { |f| f['name'] == 'LICENSE.txt' || f['name'] == 'LICENSE' }
   %td
-    - files = @client.contents repo
-    - licensed = files.any? { |f| f['name'] == 'LICENSE.txt' }
-    = " #{licensed} - #{repo} "
+    = "#{licensed}"
+  %td
+    = repo
 
