--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,10 +5,12 @@
     = stylesheet_link_tag 'http://yui.yahooapis.com/pure/0.2.1/pure-min.css', 'main', 'application'
     = yield_content :include
   %body{:style=>'text-align: center'}
-    #header
-      %h1 Licensor
-    #container
-      #main= yield
-    .container
-      .site-footer
-        Copyright (c) 2013 Katherine Whitlock
+    .pure-u-1
+      .header
+        %h1 Licensor
+        %h2 Are you licensed?
+      .content
+        .main= yield
+      .container
+        .site-footer
+          Copyright (c) 2013 Katherine Whitlock
