--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -1,3 +1,4 @@
+%h2.content-subhead enter your GitHub username below
 - form_tag '/repos', :class => 'pure-form', :method => 'get' do
   = flash_tag(:notice)
   = text_field_tag :username, value: params[:userame], type: 'text', placeholder: 'Username'
