--- a/app/views/repos/index.haml
+++ b/app/views/repos/index.haml
@@ -2,4 +2,4 @@
 = link_to 'go back', '/'
 %table{class: 'pure-table pure-table-horizontal', style: 'margin:10px auto; width:500px'}
   %tbody
-    = partial 'repos/repo', collection: Octokit.repos(params[:username],{sort: 'updated'}).map{ |repo| repo['full_name'] }
+    = partial 'repos/repo', collection: Octokit.repos(params[:username],{type: 'owner', sort: 'pushed'}).map{ |repo| repo['full_name'] }
