Fixed choosealicense reference

--- a/app/views/repos/_repo.haml
+++ b/app/views/repos/_repo.haml
@@ -6,6 +6,6 @@
     = link_to repo.split('/')[-1], "https://github.com/#{repo}"
   %td
     - if !licensed
-      = link_to '+', 'choosealicense.com'
+      = link_to '+', 'http://choosealicense.com'
     - else
       = ' '
