--- a/app/views/repos/_repo.haml
+++ b/app/views/repos/_repo.haml
@@ -6,6 +6,6 @@
     = link_to repo.split('/')[-1], "https://github.com/#{repo}"
   %td
     - if !licensed
-      = link_to '+', "https://github.com/#{repo}/new/master?filename=LICENSE"  #'/add?repo=#{repo}'
+      = link_to '+', "https://github.com/#{repo}/new/master?filename=LICENSE", target: '_blank' #'/add?repo=#{repo}'
     - else
       = ' '
