--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,9 +5,12 @@
     = stylesheet_link_tag 'http://yui.yahooapis.com/pure/0.2.1/pure-min.css', 'main', 'application'
     = yield_content :include
   %body{:style=>'text-align: center'}
+    %a{:href => "https://github.com/toroidal-code/licensor"}
+      %img{:alt => "Fork me on GitHub", :src => "/forkme_light_background.png", :style => "position: absolute; top: 0; right: 0; border: 0;"}/
     .pure-u-1
       .header
-        %h1 Licensor
+        %h1
+          = link_to 'Licensor', '/'
         %h2 Are you licensed?
       .content
         .main= yield
