--- a/app/views/repos/_repo.haml
+++ b/app/views/repos/_repo.haml
@@ -1,6 +1,6 @@
 %tr
   - licensed =  Octokit.contents(repo).any? { |f| f['name'] == 'LICENSE.txt' || f['name'] == 'LICENSE' }
-  %td{class: licensed ? 'true' : 'false'}
+  %td{class: licensed ? 'yes' : 'no'}
     = licensed
   %td
     = link_to repo.split('/')[-1], "https://github.com/#{repo}"
