--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %title= [@title, "Licensor"].compact.join(" | ")
-    = stylesheet_link_tag 'http://yui.yahooapis.com/pure/0.2.1/pure-min.css', 'main', 'application'
+    = stylesheet_link_tag 'http://yui.yahooapis.com/pure/0.2.1/pure-min.css', 'application'
     = yield_content :include
   %body{:style=>'text-align: center'}
     %a{:href => "https://github.com/toroidal-code/licensor"}
