Search for license files with a case insensitive regex (fix #3)

--- a/app/views/repos/_repo.haml
+++ b/app/views/repos/_repo.haml
@@ -1,5 +1,5 @@
 %tr
-  - licensed =  Octokit.contents(repo).any? { |f| f['name'] == 'LICENSE.txt' || f['name'] == 'LICENSE' }
+  - licensed =  Octokit.contents(repo).any? { |f| /license/i === f['name'] }
   %td{class: licensed ? 'true' : 'false'}
     = licensed ? 'yes' : 'no'
   %td
