--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,12 +1,12 @@
 !!!Strict
 %html
   %head
-    %title= [@title, "Licensor"].compact.join(" | ")
+    %title= [@title, 'Licensor'].compact.join(' | ')
     = stylesheet_link_tag 'http://yui.yahooapis.com/pure/0.2.1/pure-min.css', 'application'
     = yield_content :include
-  %body{:style=>'text-align: center'}
-    %a{:href => "https://github.com/toroidal-code/licensor"}
-      %img{:alt => "Fork me on GitHub", :src => "/forkme_light_background.png", :style => "position: absolute; top: 0; right: 0; border: 0;"}/
+  %body{style: 'text-align: center'}
+    %a{href: 'https://github.com/toroidal-code/licensor'}
+      %img{alt: 'Fork me on GitHub', src: '/forkme_light_background.png', style: 'position: absolute; top: 0; right: 0; border: 0;'}/
     .pure-u-1
       .header
         %h1
