Move inline styles to application.sass

--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -8,6 +8,17 @@
 body
   font-family: sans-serif
   color: #777
+  text-align: center
+
+.github-badge
+  position: absolute
+  top: 0
+  right: 0
+  border: 0
+
+.repositories
+  margin: 10px auto
+  width: 500px
 
 /* Add transition to containers so they can push in and out */
 
