--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -4,9 +4,9 @@
     %title= [@title, 'Licensor'].compact.join(' | ')
     = stylesheet_link_tag 'http://yui.yahooapis.com/pure/0.2.1/pure-min.css', 'application'
     = yield_content :include
-  %body{style: 'text-align: center'}
+  %body
     %a{href: 'https://github.com/toroidal-code/licensor'}
-      %img{alt: 'Fork me on GitHub', src: '/forkme_light_background.png', style: 'position: absolute; top: 0; right: 0; border: 0;'}/
+      %img.github-badge{alt: 'Fork me on GitHub', src: '/forkme_light_background.png'}/
     .pure-u-1
       .header
         %h1
